--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -59,7 +59,17 @@
             </intent-filter>
         </activity>
         
-     
+        <activity
+            android:name="com.ou.ui.ShortCutActivity"
+            android:label="@string/app_name" 
+             android:screenOrientation="landscape"
+            >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <!-- <action android:name="android.hardware.usb.action.USB_DEVICE_ATTACHED" /> -->
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
