--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -25,7 +25,7 @@
        
         >
         <activity
-            android:name="com.ou.ui.DemoActivity"
+            android:name="com.ou.ui.MainActivity"
             android:label="@string/app_name" 
             android:screenOrientation="landscape"
             
