--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -9,9 +9,6 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
-    <uses-sdk
-        android:minSdkVersion="15"
-        android:targetSdkVersion="19" />
 
     <uses-feature
         android:name="android.hardware.usb.host"
@@ -74,6 +71,18 @@
         
          <activity
             android:name="com.ou.ui.FileSelectorActivity"
+            android:label="@string/app_name" 
+             android:screenOrientation="landscape"
+            >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <!-- <action android:name="android.hardware.usb.action.USB_DEVICE_ATTACHED" /> -->
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        
+                  <activity
+            android:name="com.ou.ui.SettingActivity"
             android:label="@string/app_name" 
              android:screenOrientation="landscape"
             >
